# wimlib-kit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  test_links.txt
.github/workflows/: ci.yml  real-test.yml
fixtures/: test.swm
src/: callback.rs  cli.rs  error.rs  main.rs  progress.rs  util.rs  wim.rs
src/ffi/: mod.rs  types.rs
