[package]
name = "imgtool"
version = "0.1.0"
edition = "2021"
description = "Windows 镜像工具：基于 wimlib 的 WIM/ESD/SWM 校验、解包与信息读取"
license = "LGPL-3.0-or-later"

[[bin]]
name = "imgtool"
path = "src/main.rs"

[dependencies]
libloading = "0.8"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
